# fraude

./: .gitignore  README.md  index.py  main.py  pyproject.toml
fraude/: __init__.py  carga_de_datos.py  catalog.py  feature_engineering.py  limpieza.py  machine_learning.py  pipelines.py  utilities.py
fraude/menu/: __init__.py  menu_functions.py
fraude/viz/: __init__.py  confussion_plot.py
models/: model_metrics_naive_bayes_reampled.yaml  model_naive_bayes_reampled.jbl  transformer.jbl
notebooks/: 20250405_ML.ipynb  20250426_DE.ipynb  20250503_DE.ipynb  20250503_FE.ipynb  20250511_DV.ipynb
