[build-system]
requires = [
    "flit_core >=3.2,<4",
]
build-backend = "flit_core.buildapi"

[project.scripts]
train = "main:train"
inference = "main:inference"
single_inference = "main:single_inference"

[project]
name = "fraude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "kagglehub[pandas-datasets]>=0.3.12",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.6",
    "jupyterlab>=4.4.1",
    "plotly>=6.0.1",
    "ydata-profiling>=4.16.1",
]
